construção de animal

--- a/PetsLive2.0/web/index.xhtml
+++ b/PetsLive2.0/web/index.xhtml
@@ -5,10 +5,15 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Pets Live</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <center><h1>Pets Live</h1></center>
+        <p:breadCrumb>
+            <p:menuitem value="Home" url="index.xhtml"/>
+            <p:menuitem value="Cadastrar Animal" url="cadastroAnimal.xhtml"/>
+            <p:menuitem value="Lista Animais" url="listaAnimais.xhtml"/>
+        </p:breadCrumb>
     </h:body>
 </html>
 
